<resources>
    <string name="app_name">WorkTimer</string>
    <string name="etCustomerName_hint">Customer name</string>
    <string name="etCustomerAddress_hint">Address</string>
    <string name="etCustomerPhone_hint">Phone number</string>
    <string name="etCustomerEmail_hint">Email</string>
    <string name="etCustomerContact_hint">Contact</string>
    <string name="txtvCustomerProjects_text">Projects</string>
    <string name="btnAllCustomerProjects_text">all</string>
    <string name="btnOpenCustomerProjects_text">open</string>
    <string name="btnClosedCustomerProjects_text">closed</string>
    <string name="tabWorkTimer_text">Timer</string>
    <string name="tabWorkTimeList_text">Times</string>
    <string name="tabProjectList_text">Projects</string>
    <string name="tabCustomerList_text">Customers</string>
    <string name="btnStartProject_text">Start</string>
    <string name="btnEndProject_text">Close</string>
    <string name="etProjectName_hint">Project name</string>
    <string name="etProjectDuration_hint">Project duration</string>
    <string name="etProjectState_hint">Status</string>
    <string name="etProjectDescription_hint">Description</string>
    <string name="txtvProjectWorkTimes_text">Worktimes:</string>
    <string name="etWorkTimeProject_hint">Project</string>
    <string name="etWorkTimeDuration_hint">Duration</string>
    <string name="etWorkTimeStart_hint">Start</string>
    <string name="etWorkTimeEnd_hint">End</string>
    <string name="etWorkTimeDescription_hint">Description</string>
    <string name="btnAllProjects_text">all</string>
    <string name="btnOpenProjects_text">open</string>
    <string name="btnClosedProjects_text">closed</string>
    <string name="etWorkDescription_hint">Description</string>
    <string name="btnSaveWorkDescription_text">Save Description</string>
    <string name="txtvTimer_text">00:00:00</string>
    <string name="btnStartPauseTimer_text_start">Start</string>
    <string name="btnStartPauseTimer_text_pause">Pause</string>
    <string name="btnStop_text">Stop</string>
    <string name="msg_not_started_yet">Not started yet</string>
    <string name="delete_dialog_header">Confirm deletion</string>
    <string name="wrong_number_input">Input error</string>
    <string name="really_start_project">Sure to start project?</string>
    <string name="project_state_in_progress_not_reversable">Project can\'t be reset to state open. Sure to start?</string>
    <string name="msg_no_work_time_description">(No description available)</string>
    <string name="wrong_date_time_input">Incorrect input format</string>
    <string name="msg_date_time_input_format">Save not possible. \nIncorrect input format.\n\nPlease use only the following format:\nDuration: HH:mm:ss\nStart/End: tt.MM.yy HH:mm</string>
    <string name="total">Total</string>
    <string name="work_time_detail_view_title">WorkTime details</string>
    <string name="work_time_detail_view_edit">Edit WorkTime</string>
    <string name="project_detail_view_title">Project details</string>
    <string name="project_detail_view_edit">Edit project</string>
    <string name="project_detail_view_create">New project</string>
    <string name="customer_detail_view_title">Customer details</string>
    <string name="customer_detail_view_edit">Edit Customer</string>
    <string name="customer_detail_view_create">New customer</string>
    <string name="confirm_customer_deletion">Really delete customer?\nAll projects and workTimes of the customer are also deleted.</string>
    <string name="confirm_project_deletion">Really delete project?\nAll workTimes belonging to the project are also deleted.</string>
    <string name="confirm_work_time_deletion">Really delete workTime?</string>
    <string name="msg_hour_input_format">Saving not possible. \nWrong input format.\n\nPlease use only the following format:\nDuration: HH:mm:ss</string>
    <string name="title_please_create_project">Start of the timer not possible!</string>
    <string name="msg_please_create_project">Please create a project first or set status of an existing project to in Progress.</string>
    <string name="title_please_create_customer">Saving the project not possible!</string>
    <string name="msg_please_create_customer">Please create a customer first.</string>
    <string name="title_customer_name_missing">Saving the customer not possible!</string>
    <string name="msg_customer_name_missing">Please enter a name for the customer.</string>
    <string name="msg_no_phone">(no phone number)</string>
    <string name="msg_no_email">(no email address)</string>
    <string name="title_project_name_missing">Saving the project not possible!</string>
    <string name="msg_project_name_missing">Please enter a name for the project.</string>

</resources>