<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity" >

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_500"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:tabIndicatorColor="@color/green_700"
        app:tabSelectedTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabWorkTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabWorkTimer_text" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabWorkTimeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabWorkTimeList_text" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabProjectList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabProjectList_text" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabCustomerList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabCustomerList_text" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabLayout" />
</RelativeLayout>